default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <label>Commission</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Commission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>