default/objects/Commission__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <formula>IF( Overridden_Rate__c &gt; 0, Opportunity__r.Amount *   Overridden_Rate__c , Opportunity__r.Amount *  Sales_Agent__r.Default_Commission_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>