default/objects/Commission__c/fields/Commission_Name__c.field-meta.xml
<CustomField>
    <fullName>Commission_Name__c</fullName>
    <label>Commission Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>