default/objects/Commission__c/fields/Overridden_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overridden_Rate__c</fullName>
    <label>Overridden Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>