default/objects/Commission__c/fields/Sales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agent</label>
    <referenceTo>Sales_Agent__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>