default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Overridden_Rate__c</columns>
    <columns>Sales_Agent__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Name__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>